--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
   <link rel = "stylesheet" href="stylesheet.css">
 
-  <title>Ashlee's Portfolio</title>
+  <title>Ashlee's Portfolio!</title>
 </head>
 <body>
   <nav>
