--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
   <link rel = "stylesheet" href="stylesheet.css">
 
-  <title>Ashlee's Portfolio!</title>
+  <title>Ashlee's Portfolio</title>
 </head>
 <body>
   <nav>
@@ -38,7 +38,7 @@
       </h1>
       <p class="description" align="center">
         <B>Welcome! I'm Ashlee Boodram , a passionate computer science student with hands-on experience in 
-        Data analytics, <br></br> Web Desgin and more! </B>
+        Data analytics, <br></br> Web Design and more! </B>
       </p>
     </div>
     <div class="image">
